Fixes toggle class and attribute selection on IE

--- a/app/assets/stylesheets/layouts/l-library.scss
+++ b/app/assets/stylesheets/layouts/l-library.scss
@@ -13,7 +13,6 @@
       .row {
         width: 100%;
         margin: 0;
-        overflow-x: scroll;
         -webkit-overflow-scrolling: touch;
       }
 
